--- a/infa/modules/frontend/spa/index.html
+++ b/infa/modules/frontend/spa/index.html
@@ -36,7 +36,7 @@
     </div>
 
     <script>
-        const apiUrl = "https://rz3jcfydj6.execute-api.us-east-1.amazonaws.com/";
+        const apiUrl = "https://mpdcx9ah74.execute-api.us-east-1.amazonaws.com/";
 
         async function fetchTasks() {
             try {
